# cabot

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  build.sh  downloader  package.xml  pyproject.toml  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: runtime_bootstrap.yaml
docs/: development.md  system-overview.md
launch/: runtime_bootstrap.launch.py
native/: bootstrap_helper.c
scripts/: check_bootstrap.py
src/runtime_bootstrap/: __init__.py  bootstrap.py  cli.py  core.py
tests/: test_core.py
