<?xml version="1.0"?>
<package format="3">
  <name>runtime_bootstrap</name>
  <version>0.1.0</version>
  <description>
    Workspace-oriented bootstrap helper for Arduino-compatible controllers and robotics ROS 2 development environments.
  </description>
  <maintainer email="maintainers@example.com">Runtime Bootstrap Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
